# quantedge

./: .gitignore  CHANGELOG.md  README.md  config.py  factors.py  package.json  pipeline.py  pyproject.toml  quant-platform.jsx  requirements.txt
.github/workflows/: ci.yml
backend/: .env.example  README.md  _format.py  anomaly_store.py  backtest_scoring.py  backtest_strategy.py  breadth_engine.py  build_index_universe.py  config.py  db.py  enrich_fundamentals.py  export_macro_snapshot.py  export_universe_to_frontend.py  factors.py  favorites.py  futu_anomaly_scan.py  futu_subscribe_favorites.py  gen_data_js.py  import_nasdaq100.py  llm.py  load_spx500.py  logging_config.py  pipeline.py  pipeline_intraday.py  refresh_data_js.py  refresh_macro.py  render.yaml  requirements.txt  risk_gene.py  score_history.py  scoring.py  sector_gics.py  sector_mapping.py  server.py  signal_gene.py  smart_beta.py  stock_gene.py  stock_gene_scheduler.py  sync_futu_bulk.py  sync_spx500_bars.py  (+4 more)
backend/data_sources/: __init__.py  _intervals.py  akshare_source.py  cn_macro_source.py  finnhub_source.py  fred_source.py  futu_source.py  itick_source.py  multpl_source.py  router.py  tushare_source.py  yfinance_bulk.py  yfinance_series.py  yfinance_source.py
backend/factors_lib/: __init__.py  breadth.py  cn_macro.py  composite.py  core.py  liquidity.py  sentiment.py  valuation.py
backend/mining_alpha/: CHANGELOG.md  CONTRIBUTING.md  __init__.py  alerts.py  alpha101_factors.py  alpha191_factors.py  backtest.py  benchmark.py  catalog.py  data_loader.py  ensemble.py  explain.py  hyperopt.py  ic_report.py  improvements.py  model.py  operators.py  operators_jit.py  portfolio.py  preprocess.py  run.py  synthetic_demo.py
backend/regime/: __init__.py  alerts.py  bull_bear.py  hmm_states.py  survival.py
backend/scripts/: install_cron.sh  install_pipeline_scheduler.ps1  install_task_scheduler.ps1  mining_alpha_daily.ps1  run_scheduled.bat
backend/tests/: test_akshare_source.py  test_alerts.py  test_anomaly_scan.py  test_backtest_scoring.py  test_backtest_strategy.py  test_breadth_engine.py  test_core_helpers.py  test_data_sources.py  test_db.py  test_db_transactions.py  test_export_snapshot.py  test_export_universe.py  test_factors.py  test_factors_basic.py  test_factors_lib_scaffold.py  test_favorites.py  test_finnhub_source.py  test_format.py  test_futu_circuit_breaker.py  test_hk_fundamentals.py  test_hmm_features.py  test_intervals.py  test_intraday.py  test_llm_helpers.py  test_logging_config.py  test_mining_alpha_advanced.py  test_mining_alpha_alpha191_factors.py  test_mining_alpha_e2e.py  test_mining_alpha_improvements.py  test_mining_alpha_operators.py  test_mining_alpha_pipeline.py  test_mining_alpha_routes.py  test_regime.py  test_score_history.py  test_scoring.py  test_sector_gics.py  test_sector_mapping.py  test_smart_beta.py  test_smart_beta_backtest.py  test_smart_beta_backtest_route.py  (+9 more)
backend/universe/: __init__.py  _futu.py  enrich_us_finnhub.py  etf_us.json  loader.py  patch_index_members.py  patch_smoke_fundamentals.py  patch_smoke_sectors.py  sync_cn.py  sync_hk.py  sync_us.py
backend/value/: __init__.py  backtest.py  fetcher.py  score.py  (+2 more)
docs/: ARCHITECTURE.md  DEPLOYMENT.md  I18N.md  MACRO_DASHBOARD.md  MINING_ALPHA.md  MINING_ALPHA_FACTORS.md  PROJECT_CONTEXT.md  STOCK_GENE_ONBOARDING.md  TODO.md
frontend/: .env.example  .gitignore  .vercelignore  index.html  package-lock.json  package.json  playwright.config.ts  quant-platform.jsx  tailwind.config.js  tsconfig.json  vercel.json  vite.config.js
(+208 files in other folders)
