[project]
name = "quantedge-backend"
version = "0.6.0"
description = "QuantEdge backend — pipeline + API for quantitative scoring/backtest/monitoring"
requires-python = ">=3.10"
dependencies = [
  "yfinance",
  "pandas",
  "numpy",
  "requests",
  "fastapi",
  "uvicorn[standard]",
  "akshare",
  "python-dotenv",
  "futu-api",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.6",
]

[tool.ruff]
line-length = 110
target-version = "py310"
extend-exclude = [".venv", "backend/.venv", "backend/output", "backend/logs"]

[tool.ruff.lint]
# 起步只开启明显错误类（语法/未定义/常见 bug），不强求 style
select = ["E9", "F", "B", "UP", "PL"]
ignore = [
  "E501",    # 行长由 line-length 控制
  "PLR2004", # magic value in comparison — 评分阈值大量使用
  "PLR0911", # too many returns
  "PLR0912", # too many branches
  "PLR0913", # too many args
  "PLR0915", # too many statements
  "B008",    # FastAPI Depends() 默认值
  # ── 项目约定 ──────────────────────────────────────────────────────────────
  "PLC0415", # import-outside-top-level — yfinance/akshare/tushare 等可选依赖
             # 必须在函数内延迟 import；循环依赖也需要；intentional 模式
  "PLC2401", # non-ascii-name — 中文变量名（如 收益率、日期 等）是项目约定，
             # 方便领域专家阅读代码
  "F841",    # unused-variable — 部分场景保留 _ 变量作为占位或调试留存
  "PLW0603", # global-statement — 模块级单例（_pro、_client、_thread 等）用
             # global 做惰性初始化是项目约定，替代方案（单例类/模块属性）更繁琐
]

[tool.ruff.lint.per-file-ignores]
"backend/config.py" = ["E501"]
"backend/server.py" = ["F401"]  # logging_config 副作用 import

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
# -m "not network": 默认跳过 @pytest.mark.network 测试（撞网络、不稳定）
#   要跑：pytest -m network
#   要跑全部（含 network）：pytest -m ""
addopts = "-q -m 'not network'"
markers = [
  "network: requires network access (deselected by default)",
  "slow: slow test (e.g. e2e / large data); 用 -m 'not slow' 跳过",
]
# 屏蔽测试输出中的预期 / 第三方噪音
# - mining_alpha：numpy 在稀疏数据上的 RuntimeWarning（输出已正确处理为 NaN）
# - futu-api：SDK 内部 protobuf 生成代码的 DeprecationWarning（第三方，我们无法修）
# 精确匹配 message，其他 warning 仍会显示
filterwarnings = [
  "ignore:Mean of empty slice:RuntimeWarning",
  "ignore:invalid value encountered in divide:RuntimeWarning",
  "ignore:Call to deprecated create function:DeprecationWarning",
]
